# rabbit-hole

./: Cargo.toml  Makefile  docker-compose.yml
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
producer/: Cargo.toml  Dockerfile
producer/src/: main.rs
