[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
futures-lite = "1.12.0"
lapin = "2.1.1"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
